[package]
name = "lay"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
description = "Traits for quantum computing"
license = "Apache-2.0"
edition = "2018"
publish = true

[dependencies]
num-traits = "0.2.14"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
